Fix issue with certain variables and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
 /* CSS Custom Properties, i.e, Variables */
 :root {
     --primary-color: #1c93d2;
-    --secondary-color: #e3eaf1;
-    --tertiary-color: #e1e8f0;
+    --secondary-color: #e1e8f0;
 }
 
 
@@ -119,7 +118,7 @@ button {
     gap: 8px 16px;
 
     font-weight: 700;
-    padding: 16px 16px 0px;
+    padding: 16px 24px 0px;
     box-shadow: 4px 4px 8px rgb(200, 200, 200);
     z-index: 1;
 }
@@ -143,7 +142,7 @@ button {
 .head-search > input[type="search"] {
     height: 28px;
 
-    background-color: var(--tertiary-color);
+    background-color: var(--secondary-color);
     font-size: 16px;
     border-style: none;
     border-radius: 16px;
@@ -204,5 +203,5 @@ button {
 .main {
     grid-area: main;
 
-    background-color: var(--tertiary-color);
+    background-color: var(--secondary-color);
 }
